versel config add v2

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,8 @@
 {
-    "routes": [{ "src": "/[^.]+", "dest": "/", "status": 200 }],
-  "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }]
+  "routes": [
+    {
+      "src": "/(.*).html",
+      "dest": "/index.html"
+    }
+  ]
 }
