--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,1 @@
-{
-  "routes": [
-    {
-      "src": "/(.*).html",
-      "dest": "/index.html"
-    }
-  ]
-}
+{ "routes": [{ "src": "/[^.]+", "dest": "/", "status": 200 }] }
